welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:28: error: not found: value T
  for(i<- 0 to T.length-2){
               ^Array2:29: error: not found: value T
  	T(i)=getCouleurSol()
        ^